scripts/istio/website-db-vault-kaf-redis-arg-kust-kyv-elk-apm-sprig-sp01/manifests/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: davtro02
  labels:
    app.kubernetes.io/part-of: davtro-platform
