scripts/istio/website-db-vault-kaf-redis-arg-kust-kyv-elk-apm-sprig-sp01/manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-web-app-svc
  namespace: davtro02
spec:
  selector: { app: fastapi-web-app }
  ports:
    - name: metrics
      port: 80
      targetPort: 8080
